changed to day - 1

--- a/www/meeting1/exercise3/sources/index.html
+++ b/www/meeting1/exercise3/sources/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>COVID19 Stats By Countries - Exercise 3 - Eric ROMANG</title>
+    <title>COVID19 Stats (Day - 1) By Countries - Exercise 3 - Eric ROMANG</title>
     <!-- Pointer events polyfill for old browsers, see https://caniuse.com/#feat=pointer -->
     <script src="https://unpkg.com/elm-pep"></script>
     <style>
@@ -51,13 +51,13 @@
         right: 8px;
       }
       .ol-popup-closer:after {
-        content: "✖";
+        content: "x";
       }
     </style>
   </head>
   <body>
 
-    <h1>COVID19 Stats By Countries - Exercise 3 - Eric ROMANG</h1>
+    <h1>COVID19 Stats (Day - 1) By Countries - Exercise 3 - Eric ROMANG</h1>
     
     <div id="map" class="map"></div>
     <div style="display: none;">
